Fix ballina gap problem

--- a/style.css
+++ b/style.css
@@ -112,6 +112,8 @@ select {
   position: relative;
   top: 70px;
   height: 100%;
+  margin-bottom: -110px;
+  /* border: 5px double red; */
 }
 
 .text-overlay {
